# fikslang-interpreter

./: .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  README.md  pyproject.toml
fikslang/: __main__.py
fikslang/src/: __main__.py  machine.py  memory_state.py
fikslang/src/instructions/: __init__.py  add_all.py  clear.py  cmp.py  delete.py  dup.py  exit.py  flip.py  fts.py  get.py  glue.py  inc.py  instruction.py  jmp.py  len.py  load_from_mem.py  max_index.py  modulo.py  mul.py  mvmem.py  nop.py  pack2.py  parse.py  pop2.py  pow.py  proc.py  push.py  ret.py  rmmem.py  rotate.py  save.py  skip_if.py  sort.py  stf.py  swap.py  time.py  unpack2.py  unreachable.py  uptime.py  utils.py  (+2 more)
fikslang/tests/: test_e2e.py
fikslang/tests/sources/: get.fiks  get.json  jmp.fiks  jmp.json  pack-unpack.fiks  pack-unpack.json  rotate.fiks  rotate.json  sort.fiks  sort.json  time.fiks  time.json  vecsub.fiks  vecsub.json
